# yapoc

./: .env.example  .gitignore  CLAUDE.md  ENV_CHECK.md  Makefile  README.md  _tmp_fix.py  _tmp_patch.py  _tmp_update_settings.py  claude-solution-design.md  dag-test-step1.txt  dag-test-step2.txt  dashboard-task.md  dump.rdb  fronent-description.md  future_development.md  gemini-solution-design.md  last_audit.md  log.md  notification-system.md  openai_models.json  pyproject.toml  runtime-audit.md  test.ipynb  test.md  test.py  testing.md  tests.md  v1.md  yapoc-supervisor.sh
.playwright-mcp/: page-2026-05-17T14-58-54-667Z.yml  page-2026-05-17T15-00-35-745Z.yml  page-2026-05-17T15-01-15-465Z.yml  page-2026-05-17T15-01-57-493Z.yml  page-2026-05-17T15-02-57-878Z.yml  page-2026-05-17T15-03-22-916Z.yml  page-2026-05-17T15-03-26-162Z.yml  page-2026-05-17T15-04-03-640Z.yml  page-2026-05-17T15-04-18-549Z.yml  page-2026-05-17T15-04-32-317Z.yml  page-2026-05-17T15-05-30-503Z.yml  page-2026-05-17T15-06-16-879Z.yml  page-2026-05-17T15-07-00-537Z.yml  page-2026-05-17T15-07-59-537Z.yml  page-2026-05-17T15-10-48-745Z.yml  page-2026-05-17T15-11-26-929Z.yml  page-2026-05-17T15-12-41-096Z.yml  page-2026-05-17T15-13-46-751Z.yml  page-2026-05-17T15-14-55-162Z.yml  page-2026-05-17T15-15-35-507Z.yml  page-2026-05-17T15-16-33-329Z.yml  page-2026-05-17T15-18-03-389Z.yml  page-2026-05-17T15-19-21-741Z.yml  page-2026-05-17T15-20-52-191Z.yml  page-2026-05-17T15-21-09-157Z.yml  page-2026-05-17T15-24-19-093Z.yml  page-2026-05-17T15-25-17-572Z.yml  page-2026-05-17T15-36-06-463Z.yml  (+12 more)
data/: yapoc.db  (+4 more)
(+510 files in other folders)
